[package]
name = "autocache"
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/Yanhao/autocache.git"
description = "automatic cache management"
keywords = ["cache"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.26"
parking_lot = "0.12"
async_singleflight = "0.5"
redis = { version = "0.23", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
im = "15"
moka = { version =  "0.12", features = [ "sync" ] }
derivative = "2"
arc-swap = "1.6"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
