[package]
name = "autocache"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Yanhao/autocache.git"
description = "automatic cache management"
keywords = ["cache"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
arc-swap = "1"
derivative = "2"
tokio = { version = "1", features = ["full"] }

chrono = "0.4"
parking_lot = "0.12"
async_singleflight = "0.5"
futures = "0.3"
tracing = "0.1"

bytes = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
im = { version = "15", optional = true }
moka = { version = "0.12", features = ["sync"], optional = true }
redis = { version = "0.26", features = ["tokio-comp"], optional = true }

[dev-dependencies]
once_cell = "1"
tracing-subscriber = "0.3"

[features]
default = ["localcache"]
serilize = ["dep:serde", "dep:serde_json", "dep:bytes"]
localcache = ["dep:moka"]
ttlcache = ["dep:im"]
rediscache = ["serilize", "dep:redis"]
twolevelcache = ["serilize"]
